Added Darkly theme

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,5 @@
-<h1>Slipsum Help</h1>
-<p>Normally, both of your sorry asses would be deader than fucking fried chicken by now, but you happened to pull this shit while I'm in a transitional period, so I don't wanna kill you. <em>I wanna help you.</em> But I can't give you what's in this case, it doesn't belong to me. Besides, I've already been through too much shit this morning over this case to just hand it over to your dumb asses.</p>
+<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
+<h1>SLJ Help</h1>
+<p>Normally, both of your sorry asses would be deader than fucking fried chicken by now, but you happened to pull this shit while I'm in a transitional period, so I don't wanna kill you.</p>
+<p><em>I wanna help you.</em> But I can't give you what's in this case, it doesn't belong to me. Besides, I've already been through too much shit this morning over this case to just hand it over to your dumb asses.</p>
+</div>
